--- a/inventory/group_vars/vmware.example
+++ b/inventory/group_vars/vmware.example
@@ -22,5 +22,6 @@ esxi_vswitch: 'vSwitch0'
 
 datacenter_name: 'SECNET'
 
-lic_vcenter_8: 
-lic_esxi_6:
+lic_vcenter_8: "add-your-license"
+lic_esxi_6: "add-your-license"
+lic_esxi_8: "add-your-license"
