--- a/playbooks/vmware/initial_setup_hqvh1.yml
+++ b/playbooks/vmware/initial_setup_hqvh1.yml
@@ -35,28 +35,52 @@
         state: absent
       delegate_to: localhost
 
-    - name: Add Management Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
+    - name: Remove VM Network Portgroup
+      vmware_portgroup:
+        hostname: '{{ esxi_host_11 }}'
         username: '{{ esxi_username }}'
         password: '{{ esxi_password }}'
         validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
+        hosts: [hqvh11.secnetwork.org]
         switch: "{{ esxi_vswitch }}"
-        portgroup: "Management"
-        vlan_id: "11"
+        portgroup: "VM Network"
+        state: absent
       delegate_to: localhost
 
-    - name: Add Admins Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
+    - name: Remove VM Network Portgroup
+      vmware_portgroup:
+        hostname: '{{ esxi_host_12 }}'
         username: '{{ esxi_username }}'
         password: '{{ esxi_password }}'
         validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
+        hosts: [hqvh12.secnetwork.org]
         switch: "{{ esxi_vswitch }}"
-        portgroup: "Admins"
-        vlan_id: "15"
+        portgroup: "VM Network"
+        state: absent
+      delegate_to: localhost
+
+    - name: Remove VM Network Portgroup
+      vmware_portgroup:
+        hostname: '{{ esxi_host_13 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh13.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "VM Network"
+        state: absent
+      delegate_to: localhost
+
+    - name: Remove VM Network Portgroup
+      vmware_portgroup:
+        hostname: '{{ esxi_host_14 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh14.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "VM Network"
+        state: absent
       delegate_to: localhost
 
     - name: Add vManagement Portgroup
@@ -83,102 +107,6 @@
         vlan_id: "31"
       delegate_to: localhost
 
-    - name: Add PKI Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "PKI"
-        vlan_id: "32"
-      delegate_to: localhost
-
-    - name: Add NAC Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "NAC"
-        vlan_id: "33"
-      delegate_to: localhost
-
-    - name: Add SSO Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "SSO"
-        vlan_id: "34"
-      delegate_to: localhost
-
-    - name: Add SSO Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "SSO"
-        vlan_id: "34"
-      delegate_to: localhost
-
-    - name: Add LOG Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "LOG"
-        vlan_id: "41"
-      delegate_to: localhost
-
-    - name: Add VAS Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "VAS"
-        vlan_id: "42"
-      delegate_to: localhost
-
-    - name: Add MON Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "MON"
-        vlan_id: "43"
-      delegate_to: localhost
-
-    - name: Add NVR Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "NVR"
-        vlan_id: "44"
-      delegate_to: localhost
-
     - name: Add Servers Portgroup
       community.vmware.vmware_portgroup:
         hostname: '{{ esxi_host_1 }}'
@@ -189,28 +117,4 @@
         switch: "{{ esxi_vswitch }}"
         portgroup: "Servers"
         vlan_id: "51"
-      delegate_to: localhost
-
-    - name: Add Frontend DMZ Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "DMZ-Frontend"
-        vlan_id: "91"
-      delegate_to: localhost
-
-    - name: Add Backend DMZ Portgroup
-      community.vmware.vmware_portgroup:
-        hostname: '{{ esxi_host_1 }}'
-        username: '{{ esxi_username }}'
-        password: '{{ esxi_password }}'
-        validate_certs: no
-        hosts: [hqvh1.secnetwork.org]
-        switch: "{{ esxi_vswitch }}"
-        portgroup: "DMZ-Backend"
-        vlan_id: "95"
       delegate_to: localhost
