--- a/playbooks/linux/docker/02_install_docker.yml
+++ b/playbooks/linux/docker/02_install_docker.yml
@@ -4,6 +4,9 @@
   hosts: 'linux'
   become: true
 
+  collections:
+    - community.general
+
   tasks:
     - name: Install Docker CE Repository
       shell: dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
