--- a/playbooks/windows/create_ad_dns_initial.yml
+++ b/playbooks/windows/create_ad_dns_initial.yml
@@ -9,6 +9,15 @@
   vars:
     create_dns_record:
 
+      - win_dns_record_name: "hqpdc2.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.31.12"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "12.31"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqpdc2.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
       - win_dns_record_name: "hqcrfw1.secnetwork.org."
         win_dns_record_type: "A"
         win_dns_record_value: "10.0.11.251"
