--- a/playbooks/windows/create_ad_dns_initial.yml
+++ b/playbooks/windows/create_ad_dns_initial.yml
@@ -193,6 +193,15 @@
         win_dns_record_value: "hqhsm1.secnetwork.org."
         win_dns_record_zone: "0.10.in-addr.arpa"
 
+      - win_dns_record_name: "hqhsm2.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.32.12"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "12.32"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqhsm2.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
   tasks:
     - name: Creating DNS Record
       win_dns_record:
