--- a/playbooks/windows/create_ad_dns_initial.yml
+++ b/playbooks/windows/create_ad_dns_initial.yml
@@ -202,6 +202,15 @@
         win_dns_record_value: "hqhsm2.secnetwork.org."
         win_dns_record_zone: "0.10.in-addr.arpa"
 
+      - win_dns_record_name: "hqproxy1.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.95.11"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "11.95"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqproxy.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
   tasks:
     - name: Creating DNS Record
       win_dns_record:
@@ -210,3 +219,10 @@
         value: '{{ item.win_dns_record_value }}'
         zone: '{{ item.win_dns_record_zone }}'
       with_items: '{{ create_dns_record }}'
+
+    - name: Creating PKI Record
+      win_dns_record:
+        name: 'pki'
+        type: 'CNAME'
+        value: 'hqproxy1.secnetwork.org'
+        zone: 'secnetwork.org'
