--- a/playbooks/windows/policy_security_08_proxy.yml
+++ b/playbooks/windows/policy_security_08_proxy.yml
@@ -25,7 +25,7 @@
         source_user: ['any']
         destination_zone: ['L3-DMZ']
         destination_ip: ['10.0.95.11']
-        application: ['web-browsing','ssl','oscp']
+        application: ['web-browsing','ssl','ocsp']
         service: ['application-default']
         category: ['any']
         #log_setting: 'Default Log'
