--- a/playbooks/windows/create_ad_dns_initial.yml
+++ b/playbooks/windows/create_ad_dns_initial.yml
@@ -211,6 +211,15 @@
         win_dns_record_value: "hqproxy.secnetwork.org."
         win_dns_record_zone: "0.10.in-addr.arpa"
 
+      - win_dns_record_name: "hqmon1.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.43.11"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "11.43"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqmon1.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
   tasks:
     - name: Creating DNS Record
       win_dns_record:
@@ -225,4 +234,11 @@
         name: 'pki'
         type: 'CNAME'
         value: 'hqproxy1.secnetwork.org'
+        zone: 'secnetwork.org'
+
+    - name: Creating MON CNAME Record
+      win_dns_record:
+        name: 'mon'
+        type: 'CNAME'
+        value: 'hqmon1.secnetwork.org'
         zone: 'secnetwork.org'
